# preSNpy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  __init__.py  compactness_plot.py  default_style.mlpstyle  global_vars.py  presnpy.yml  pyproject.toml  pytest.ini  read_model.py  requirements.txt  setup.py
.github/workflows/: python-package.yml  simple-tests.yml
geometry/: grid.py
hydro/: hydro.py
nuclear/: __init__.py  nuclear.py
physics/: __init__.py  hydro.py  nuclear.py  physarray.py
postbounce/: postbounce.py
preSNpy/: __about__.py  __init__.py  global_vars.py
preSNpy/geometry/: grid.py
preSNpy/model/: __init__.py  model_class.py  postbounce.py  presn.py
preSNpy/physics/: __init__.py  hydro.py  nuclear.py  physarray.py
preSNpy/postbounce/: __init__.py  model.py  postbounce.py
preSNpy/units/: __init__.py  physcon.py  units.py
scripts/: compactness_plot.py  density_plot.py  folders.py  read_model.py  shaded_areas.py
tests/: compare_quantities.py  global_quantities.py  open_files.py  test_compare_quantities.py  test_open_files.py
tests/models/: kepler1  kepler1_new  kepler2  postbounce
